--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,22 @@ services:
     ports:
       - 5672:5672
       - 15672:15672
+  auction-service:
+    image: ghanem22/auction-service:latest
+    build: 
+      context: .
+      dockerfile: src/AuctionService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - RabbitMq__Host=rabbitmq
+      - ConnectionStrings__DefaultConnection=Server=postgres:5432;User Id=postgres;Password=postgrespw;Database=auction
+      - IdentityServiceUrl=http://identity-service
+    ports:
+      - 7001:80
+    depends_on:
+      - postgres
+      - rabbitmq
 volumes:
   pgdata:
   mongodata:
