--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,22 @@ services:
     depends_on:
       - postgres
       - rabbitmq
+  search-service:
+    image: ghanem22/search-service:latest
+    build: 
+      context: .
+      dockerfile: src/SearchService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - RabbitMq__Host=rabbitmq
+      - ConnectionStrings__MongoDbConnection=mongodb://root:mongopw@mongodb
+      - AuctionServiceUrl=http://auction-service
+    ports:
+      - 7002:80
+    depends_on:
+      - mongodb
+      - rabbitmq
 volumes:
   pgdata:
   mongodata:
