--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -15,7 +15,10 @@
     "query-string": "^9.1.0",
     "react": "^18",
     "react-countdown": "^2.3.6",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "zustand": "^4.5.4"
   },
