--- a/src/AuctionService/Dockerfile
+++ b/src/AuctionService/Dockerfile
@@ -8,6 +8,7 @@ COPY Carsties.sln Carsties.sln
 COPY src/AuctionService/AuctionService.csproj src/AuctionService/AuctionService.csproj
 COPY src/SearchService/SearchService.csproj src/SearchService/SearchService.csproj
 COPY src/GatewayService/GatewayService.csproj src/GatewayService/GatewayService.csproj
+COPY src/BiddingService/BiddingService.csproj src/BiddingService/BiddingService.csproj
 COPY src/IdentityService/IdentityService.csproj src/IdentityService/IdentityService.csproj
 COPY src/Contracts/Contracts.csproj src/Contracts/Contracts.csproj
 
@@ -15,6 +16,7 @@ RUN dotnet restore Carsties.sln
 
 COPY src/AuctionService src/AuctionService
 COPY src/Contracts src/Contracts
+
 WORKDIR /app/src/AuctionService
 RUN dotnet publish -c Release -o /app/src/out
 
