--- a/src/BiddingService/Dockerfile
+++ b/src/BiddingService/Dockerfile
@@ -14,12 +14,12 @@ COPY src/Contracts/Contracts.csproj src/Contracts/Contracts.csproj
 
 RUN dotnet restore Carsties.sln
 
-COPY src/SearchService src/SearchService
+COPY src/BiddingService src/BiddingService
 COPY src/Contracts src/Contracts
-WORKDIR /app/src/SearchService
+WORKDIR /app/src/BiddingService
 RUN dotnet publish -c Release -o /app/src/out
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build /app/src/out .
-ENTRYPOINT [ "dotnet", "SearchService.dll" ]
+ENTRYPOINT [ "dotnet", "BiddingService.dll" ]
