--- a/src/GatewayService/appsettings.Docker.json
+++ b/src/GatewayService/appsettings.Docker.json
@@ -21,7 +21,14 @@
              "Address": "http://search-service"
            }
          }
-       }
+       },
+       "bids": {
+        "Destinations": {
+          "bidApi": {
+            "Address": "http://bid-service"
+          }
+        }
+      }
      }
    }
  }
