feat(notification): imeplement notification service

--- a/src/GatewayService/appsettings.Docker.json
+++ b/src/GatewayService/appsettings.Docker.json
@@ -27,6 +27,13 @@
           "bidApi": {
             "Address": "http://bid-service"
           }
+        },
+        "notifications": {
+          "Destinations": {
+            "notifyApi": {
+              "Address": "http://notify-service"
+            }
+          }
         }
       }
      }
