--- a/src/NotificationService/Dockerfile
+++ b/src/NotificationService/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 as build
 WORKDIR /app
 EXPOSE 80
 
@@ -13,14 +13,17 @@ COPY src/NotificationService/NotificationService.csproj src/NotificationService/
 COPY src/IdentityService/IdentityService.csproj src/IdentityService/IdentityService.csproj
 COPY src/Contracts/Contracts.csproj src/Contracts/Contracts.csproj
 
+# Restore package deps
 RUN dotnet restore Carsties.sln
 
-COPY src/SearchService src/SearchService
+# Copy the app folders over
+COPY src/AuctionService src/AuctionService
 COPY src/Contracts src/Contracts
-WORKDIR /app/src/SearchService
+WORKDIR /app/src/AuctionService
 RUN dotnet publish -c Release -o /app/src/out
 
+# Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build /app/src/out .
-ENTRYPOINT [ "dotnet", "SearchService.dll" ]
+ENTRYPOINT [ "dotnet", "AuctionService.dll" ]
