--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
+    "date-fns": "^3.6.0",
     "flowbite-react": "^0.10.1",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
