--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "sharp": "^0.33.4",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
