--- a/src/GatewayService/appsettings.Docker.json
+++ b/src/GatewayService/appsettings.Docker.json
@@ -6,6 +6,7 @@
      }
    },
    "IdentityServiceUrl": "http://identity-service",
+   "ClientApp": "http://app.carsties.local",
    "ReverseProxy": {
      "Clusters": {
        "auctions": {
