--- a/src/IdentityService/IdentityService.csproj
+++ b/src/IdentityService/IdentityService.csproj
@@ -23,5 +23,6 @@
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.3" />
+		<PackageReference Include="Polly" Version="8.4.1" />
 	</ItemGroup>
 </Project>
