--- a/src/SearchService/SearchService.csproj
+++ b/src/SearchService/SearchService.csproj
@@ -11,7 +11,8 @@
      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
      <PackageReference Include="MassTransit.RabbitMQ" Version="8.4.0" />
      <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.3" />
-    <PackageReference Include="MongoDB.Entities" Version="24.1.1" />
+     <PackageReference Include="MongoDB.Entities" Version="24.1.1" />
+     <PackageReference Include="Polly" Version="8.4.1" />
   </ItemGroup>
 
   <ItemGroup>
